--- a/Views/User/SignUp.cshtml
+++ b/Views/User/SignUp.cshtml
@@ -5,7 +5,7 @@
         <div class="col-5 mx-auto">
             <!-- Sign Up-->
             <section class="form-dark wow fadeIn">
-                <form asp-action="SignUp" asp-controller="User" method="POST">
+                <form id="SignupForm" method="POST">
                     <!-- Form -->
                     <div class="card card-image" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/pricing-table7.jpg'); width: 28rem;">
                         <div class="text-white rgba-stylish-strong py-5 px-5 z-depth-4">
@@ -47,7 +47,7 @@
                                 <label asp-for="ConfirmPassword">Confirm Password</label>
                                 <div class="form-check my-4">
                                     <input class="form-check-input" type="checkbox" value="true" id="TermsAndConditions" asp-for="TermsAndConditions">
-                                    <label class="form-check-label white-text" asp-for="TermsAndConditions">Accept the<a href="#" class="green-text font-weight-bold"> Terms and Conditions</a></label>
+                                    <label class="form-check-label white-text" asp-for="TermsAndConditions">Accept the<a asp-controller="User" asp-action="TermsAndConditions" class="green-text font-weight-bold"> Terms and Conditions</a></label>
                                 </div>
                             </div>
 
@@ -56,7 +56,7 @@
 
                                 <!--Grid column-->
                                 <div class="text-center mb-3 col-md-12">
-                                    <button type="submit" class="btn btn-success btn-block btn-rounded z-depth-1">Sign up</button>
+                                    <button type="button" id="SignupSubmit" class="btn btn-success btn-block btn-rounded z-depth-1">Sign up</button>
                                 </div>
                                 <!--Grid column-->
                             </div>
@@ -78,3 +78,101 @@
                            
     </div>
 </div>
+
+<!-- Modal processing -->
+<div class="modal fade" id="processingModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header justify-content-center">
+                <h4 class="modal-title" id="exampleModalLabel">Processing...</h4>
+            </div>
+            <div class="modal-body text-center">
+
+                <div class="preloader-wrapper big active">
+                    <div class="spinner-layer spinner-blue">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                    <div class="spinner-layer spinner-red">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                    <div class="spinner-layer spinner-yellow">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                    <div class="spinner-layer spinner-green">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal processing -->
+
+<!-- MODAL fail warning for Sign up-->
+<div class="modal fade left" id="ModalWarningSignUp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-notify modal-warning modal-dialog-centered" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading">Warning</p>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+            </div>
+
+            <!--Body-->
+            <div class="modal-body">
+
+                <div class="row">
+                    <div class="col-9">
+                        <p>There was an error in your input</p>
+                        <p class="card-text"><strong>All fields must be filled with the apropriate information and you must accept the terms.</strong></p>
+                    </div>
+                </div>
+
+            </div>
+
+            <!--Footer-->
+            <div class="modal-footer justify-content-center">
+                <a type="button" class="btn btn-outline-primary waves-effect" data-dismiss="modal">Close</a>
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!-- MODAL fail warning-->
