--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -93,6 +93,24 @@
                                 <h4 class="h4 text-center">No reviews has been made for this book, be the first!</h4>
                             </div>
                         }
+                        else
+                        {
+                            foreach(var review in @Model.Review)
+                            {
+                            <div class="row container">
+                                <div class="col-12">
+                                    <div class="media">
+                                        <img class="d-flex rounded-circle avatar z-depth-1-half mr-3" src="https://mdbootstrap.com/img/Photos/Avatars/avatar-10.jpg" alt="Avatar">
+                                        <div class="media-body">
+                                            <h4 class="my-0 font-weight-bold blue-text">@review.Reviewer</h4>
+                                            <div id="userRating" class="rate h1 orange-text" data-rate-value=@((double)review.Rating / 2)></div>
+                                            @review.Review
+                                            </div>
+                                    </div>
+                                </div>
+                            </div>
+                            }
+                        }
                     </div>
                 </div>
             </div>
@@ -112,8 +130,8 @@
                             <div class="media mt-3 shadow-textarea">
                                 <img class="d-flex rounded-circle avatar z-depth-1-half mr-3" src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.jpg" alt="Generic placeholder image">
                                 <div class="media-body">
-                                    <h4 class="my-0 font-weight-bold blue-text">@nameClaim</h4>
-                                    <div id="userRating" class="rate h1 orange-text"></div>
+                                    <h4 class="my-0 font-weight-bold blue-text pb-0">@nameClaim</h4>
+                                    <div id="userRating" class="rate h1 orange-text rate-off"></div>
                                     <div class="form-group basic-textarea rounded-corners">
                                         <textarea class="form-control z-depth-1" id="exampleFormControlTextarea3" rows="6" placeholder="Write your comment..."></textarea>
                                     </div>
