Fixed for danni

--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -4,6 +4,11 @@
 @using System.Security.Claims
 @using BookCave.Models
 
+@section scripts {
+     <script type="text/javascript" src="~/js/rater.js"></script>
+}
+  
+
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
