--- a/Views/Search/Results.cshtml
+++ b/Views/Search/Results.cshtml
@@ -22,7 +22,7 @@
         </div>
     </div>-->
     <div class="col-lg-8 col-md-12 offset-lg-2 animated fadeIn mb-5 container body-container">
-        <div class="btn-group align-div-right">
+        <div class="btn-group align-div-right mb-3">
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sort by...</button>
             <div class="dropdown-menu">
                 <a id="name-asc">Name Ascending</a>
