search fully functioning

--- a/Views/Search/Index.cshtml
+++ b/Views/Search/Index.cshtml
@@ -3,10 +3,10 @@
 <div class="col-lg-8 col-md-12 offset-lg-2 wow fadeIn mb-5 container body-container">
     <div class="card card-cascade wider">
         <div class="view gradient-card-header blue-gradient p-3">
-            <h4 class="h2 mb-0">Advanced search</h4>
+            <h4 class="h2 mb-0">Search</h4>
         </div>
         <div class="card-body">
-            <form method="POST" asp-action="Results">
+            <form method="Get" asp-action="Results">
 
                 <div class="form-group row d-flex">
                     <p class="label col-md-4 pt-2">Title</p>
