--- a/Views/Manage/ViewEmployeesList.cshtml
+++ b/Views/Manage/ViewEmployeesList.cshtml
@@ -1,3 +1,4 @@
+
 <div class="col-lg-10 col-md-12 offset-lg-1 wow fadeIn mb-5">
     <div class="card card-cascade wider">
         <div class="view gradient-card-header blue-gradient p-3">
@@ -9,10 +10,11 @@
                     <table id="viewEmployeesTable" class="table table-striped" cellspacing="0" width="100%">
                         <thead>
                             <tr>
-                                <th>Employee ID</th>
-                                <th>Username</th>
-                                <th>User Type</th>
-                                <th class="text-center">Actions</th>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>User ID</th>
+                                <th>Role</th>
+                                <th>Options</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -25,15 +27,45 @@
     </div>
 </div>
 
-
-<!-- Modal to confirm deletion-->
-<div class="modal fade" id="confirmDelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-notify modal-danger" role="document">
+<!-- Success delete modal -->
+<div class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-notify modal-success" role="document">
         <!--Content-->
         <div class="modal-content">
             <!--Header-->
             <div class="modal-header">
-                <p class="heading">Confirm deletion</p>
+                <p class="heading lead">Success!</p>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+            </div>
+
+            <!--Body-->
+            <div class="modal-body">
+                <div class="text-center">
+                    <i class="fa fa-check fa-4x mb-3 animated rotateIn"></i>
+                    <p><span class="modalEmployeeName"></span>has been successfully deleted!</p>
+                </div>
+            </div>
+
+            <div class="modal-footer justify-content-center">
+                <a type="button" class="btn btn-primary" data-dismiss="modal">Close!</a>
+            </div>
+
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+
+<!-- Failed to delete modal -->
+<div class="modal fade left" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-notify modal-warning" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading">Error!</p>
 
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true" class="white-text">&times;</span>
@@ -44,19 +76,173 @@
             <div class="modal-body">
 
                 <div class="row">
-                    <div class="col">
-                        <h4 class="text-center" id="modalText">Are you sure you would like to delete employee "<span>EMPLOYEE NAME</span>"?</h4>
+                    <div class="text-center">
+                        <p><strong>Something went wrong!</strong></p>
+                        <p>There was an error in the server when attempting to delete <span class="modalEmployeeName"></span></p>
                     </div>
                 </div>
             </div>
 
             <!--Footer-->
             <div class="modal-footer justify-content-center">
-                <a type="button" class="btn btn-danger" id="yesDelete">Yes! Delete this</a>
-                <a type="button" class="btn btn-outline-primary waves-effect" data-dismiss="modal">No, thanks</a>
+                <a type="button" class="btn btn-primary waves-effect" data-dismiss="modal">Dismiss</a>
             </div>
         </div>
         <!--/.Content-->
     </div>
 </div>
-<!-- End of modal to confirm deletion-->
+
+<!-- Modal while waiting for confirmation -->
+<div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-notify modal-info" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading lead text-center">Waiting for response...</p>
+            </div>
+
+            <div class="text-center m-5 p-5">
+                <div class="preloader-wrapper big active">
+                    <div class="spinner-layer spinner-blue-only">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="gap-patch">
+                            <div class="circle"></div>
+                        </div>
+                        <div class="circle-clipper right">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!-- End of waiting modal -->
+
+<!-- Modal to Modify Employee-->
+<div class="modal fade" id="ModifyEmployee" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-notify modal-info modal-lg" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading">Modify/Delete <span class="modalEmployeeName"></span></p>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+            </div>
+
+            <!--Body-->
+            <div class="modal-body">
+
+                <div class="row">
+                    <div class="col justify-content-center text-center">
+                        <div class="row justify-content-center text-center">
+                            <h3>Remove User</h3>
+                            <p>Note that this action is not reversible!</p>
+                        </div>
+                        <div class="row justify-content-center text-center mt-5">
+                            <a type="button" class="btn btn-danger" id="yesDelete">Yes! Delete</a>
+                        </div>
+                    </div>
+                
+                    <div class="col justify-content-center text-center">
+                        <h3>Change Employee Role</h3>
+                        <p>Choose a new role for the user and press sumbit</p>
+                        <p>Current Role: <strong><span class="curr-role"></span></strong></p>
+                        <select class="roles">
+                            <option value="User">User</option>
+                            <option value="Employee">Employee</option>
+                            <option value="Admin">Admin</option>
+                        </select>
+
+                        <button id="modifyRole" class="btn btn-success">Change Role</button>
+                    </div>
+                </div>
+            </div>
+
+            <!--Footer-->
+            <div class="modal-footer justify-content-center">
+                
+                <a type="button" class="btn btn-outline-primary waves-effect" data-dismiss="modal">Cancel</a>
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!-- Modal to Modify Employee-->
+
+<!-- Failed to modify Modal -->
+<div class="modal fade left" id="modifyFail" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-notify modal-warning" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading">Error!</p>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+            </div>
+
+            <!--Body-->
+            <div class="modal-body">
+
+                <div class="row">
+                    <div class="text-center">
+                        <p><strong>Something went wrong!</strong></p>
+                        <p>There was an error in the server when attempting to change the role for <span class="modalEmployeeName"></span></p>
+                    </div>
+                </div>
+            </div>
+
+            <!--Footer-->
+            <div class="modal-footer justify-content-center">
+                <a type="button" class="btn btn-primary waves-effect" data-dismiss="modal">Dismiss</a>
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!-- Failed to modify Modal -->
+
+<!-- Success delete modal -->
+<div class="modal fade" id="successModifyModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-notify modal-success" role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <!--Header-->
+            <div class="modal-header">
+                <p class="heading lead">Success!</p>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" class="white-text">&times;</span>
+                </button>
+            </div>
+
+            <!--Body-->
+            <div class="modal-body">
+                <div class="text-center">
+                    <i class="fa fa-check fa-4x mb-3 animated rotateIn"></i>
+                    <p><span class="modalEmployeeName"></span> role has bee successfully changed!</p>
+                    <p><strong>You will have to refresh the page for it to update</strong></p>
+                    <p>Press close to refresh</p>
+                </div>
+            </div>
+
+            <div class="modal-footer justify-content-center">
+                <a type="button" class="btn btn-primary" data-dismiss="modal">Close!</a>
+            </div>
+
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!-- Success delete modal -->
