--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -64,7 +64,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header justify-content-center">
-                <h4 class="modal-title" id="exampleModalLabel">Processing...</h4>
+                <h4 class="modal-title" id="exampleModalLabel">Logging in...</h4>
             </div>
             <div class="modal-body text-center">
 
