sign in not login

--- a/Views/Shared/_accountDropdown.cshtml
+++ b/Views/Shared/_accountDropdown.cshtml
@@ -5,7 +5,7 @@
         <div class="divider dropdown-divider"></div>
         <a class="dropdown-item waves-light" asp-controller="User" asp-action="LogOut"><i class="fa fa-sign-out" aria-hidden="true"></i> Sign Out</a>
     } else {
-        <a class="dropdown-item waves-light" asp-controller="User" asp-action="Login"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+        <a class="dropdown-item waves-light" asp-controller="User" asp-action="Login"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign In</a>
         <a class="dropdown-item waves-light" asp-controller="User" asp-action="SignUp"><i class="fa fa-user-plus" aria-hidden="true"></i>  Sign up</a>
     }
 }
